Lots of stuff added
Picture, about, skills, projects, coloring

--- a/index.html
+++ b/index.html
@@ -16,21 +16,54 @@
       </nav>
     </header>
 
+    <section id="profileimg">
+      <a><img src="images/profile.png" alt="Profile" class="profileimg" /></a>
+    </section>
+
     <section id="about">
-      <h1>About Me</h1>
-      <p>Write a brief introduction about yourself here.</p>
+      <h1>Hi, I’m Anssi. Nice to meet you.</h1>
+      <p>
+        I am a 32-year-old from Tampere, Finland, with a fervent pursuit of
+        software development. I am driven by an unyielding passion for
+        continuous growth and learning within this dynamic field.
+      </p>
+      <p>
+        Within this portfolio website, I offer a glimpse of my skills and select
+        projects. Currently, I am actively seeking an internship opportunity. If
+        you're in search of an enthusiastic intern who brings both dedication
+        and capability to the table, I welcome your inquiries and interview
+        requests.
+      </p>
     </section>
 
     <section id="skills">
       <h1>Skills</h1>
       <div class="skill">
-        <h2>Lanuages</h2>
-        <p>C# ect.</p>
+        <h2>🖥️ Programming Languages</h2>
+        <p>C#</p>
+        <p>JavaScript</p>
+        <p>TypeScript</p>
+        <p>HTML</p>
+        <p>CSS</p>
         <!-- <a href="#">Learn More</a> -->
       </div>
       <div class="skill">
-        <h2>Tools</h2>
-        <p>Angular ect.</p>
+        <h2>🛠️ Development Frameworks and Technologies</h2>
+        <p>Angular</p>
+        <p>Node.js</p>
+        <p>Express</p>
+        <p>Phaser 3</p>
+        <p>PostgreSQL</p>
+        <!-- <a href="#">Learn More</a> -->
+      </div>
+      <div class="skill">
+        <h2>🔧 Development Tools</h2>
+        <p>GitHub</p>
+        <p>Visual Studio Code</p>
+        <p>Flyway</p>
+        <p>Postman</p>
+        <p>Browser Console</p>
+        <p>Unity</p>
         <!-- <a href="#">Learn More</a> -->
       </div>
     </section>
@@ -38,19 +71,29 @@
     <section id="projects">
       <h1>Projects</h1>
       <div class="project">
-        <h2>Project Name 1</h2>
-        <p>Description of the project goes here.</p>
-        <a href="#">Learn More</a>
+        <h2>Pass the Pigs Console Game</h2>
+        <p>
+          Pass the Pigs is a fun and addictive dice game where players roll
+          pig-shaped dice and earn points based on the position the pigs land
+          in. This version of the game is implemented in C# and played through
+          the console.
+        </p>
+        <a href="https://github.com/AnssiPeltola/PassThePigs">Learn More</a>
       </div>
       <div class="project">
-        <h2>Project Name 2</h2>
-        <p>Description of the project goes here.</p>
-        <a href="#">Learn More</a>
+        <h2>Astronomy Picture of the Day</h2>
+        <p>
+          C# console application that effortlessly fetches NASA's Picture of the
+          Day using their API.
+        </p>
+        <a href="https://github.com/AnssiPeltola/NASA-PictureOfTheDay-API"
+          >Learn More</a
+        >
       </div>
       <div class="project">
-        <h2>Project Name 3</h2>
-        <p>Description of the project goes here.</p>
-        <a href="#">Learn More</a>
+        <h2>Discord LunchBot</h2>
+        <p>Work in progress</p>
+        <a href="https://github.com/AnssiPeltola/LunchDiscordBot">Learn More</a>
       </div>
     </section>
 
