Updated script.js + fonts
Added blur when opening contact me!

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+    </style>
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Home Page</a></li>
+          <!-- <li><a href="index.html">Home Page</a></li> -->
           <li><button class="show-contact">Contact me!</button></li>
           <!-- <li><a href="contact.html">Contact</a></li> -->
         </ul>
@@ -142,7 +145,7 @@
         <h1>Contact Me</h1>
         <p>
           You can reach me at
-          <a href="mailto:your@email.com">your@email.com</a>.
+          <a href="anssipeltola@hotmail.com">anssipeltola@hotmail.com</a>.
         </p>
       </div>
       <div class="overlay hidden"></div>
