Update to index.html & syles.css
Cleared and deleted not needed code.
Added border colors to Skills and projects. Made Contact me button circle.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
     </style>
     <header>
-      <nav>
-        <ul>
-          <!-- <li><a href="index.html">Home Page</a></li> -->
-          <li><button class="show-contact">Contact me!</button></li>
-          <!-- <li><a href="contact.html">Contact</a></li> -->
-        </ul>
-      </nav>
+      <button class="show-contact">Contact me!</button>
     </header>
 
     <section id="profileimg">
@@ -49,7 +43,6 @@
         <p>TypeScript</p>
         <p>HTML</p>
         <p>CSS</p>
-        <!-- <a href="#">Learn More</a> -->
       </div>
       <div class="skill">
         <h2>🛠️ Development Frameworks and Technologies</h2>
@@ -58,7 +51,6 @@
         <p>Express</p>
         <p>Phaser 3</p>
         <p>PostgreSQL</p>
-        <!-- <a href="#">Learn More</a> -->
       </div>
       <div class="skill">
         <h2>🔧 Development Tools</h2>
@@ -68,7 +60,6 @@
         <p>Postman</p>
         <p>Browser Console</p>
         <p>Unity</p>
-        <!-- <a href="#">Learn More</a> -->
       </div>
     </section>
 
