--- a/index.html
+++ b/index.html
@@ -133,11 +133,32 @@
     <section id="contacthidden">
       <div class="contact hidden">
         <button class="close-contact">&times;</button>
-        <h1>Contact Me</h1>
-        <p>
-          You can reach me at
-          <a href="anssipeltola@hotmail.com">anssipeltola@hotmail.com</a>.
-        </p>
+        <div class="contact-content">
+          <div class="contact-text">
+            <h1>Contact Me</h1>
+            <p>
+              Email:
+              <a href="mailto:anssipeltola@hotmail.com"
+                >anssipeltola@hotmail.com</a
+              >
+            </p>
+            <p>Phone: +35840024****</p>
+            <p>Address: Itsenäisyydenkatu 18 **</p>
+            <p>FI-33500 TAMPERE</p>
+            <p>FINLAND</p>
+          </div>
+          <div class="contact-map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d951.9307855102961!2d23.784574139140428!3d61.49861417383124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x468edf5673cdeeef%3A0x54bfcf1c76b810ed!2sItsen%C3%A4isyydenkatu%2018%2C%2033500%20Tampere!5e0!3m2!1sfi!2sfi!4v1693223567084!5m2!1sfi!2sfi"
+              width="400"
+              height="300"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
       </div>
       <div class="overlay hidden"></div>
     </section>
