Added hidden Contact me form
Added Contact me form with PHP and MySQL database.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </header>
 
     <section id="profileimg">
-      <a><img src="images/profile.png" alt="Profile" class="profileimg" /></a>
+      <a href="form.html"
+        ><img src="images/profile.png" alt="Profile" class="profileimg"
+      /></a>
     </section>
 
     <section id="about">
