Updated form.html + process-form.php
Added more info you can give about yourself when filling form. Also had to update then that my SQL can take those infos.

--- a/form.html
+++ b/form.html
@@ -13,10 +13,42 @@
     <h1>Contact me!</h1>
     <form action="process-form.php" method="post">
       <label for="name">Name</label>
-      <input type="text" id="name" name="name" />
+      <input
+        type="text"
+        id="name"
+        name="name"
+        placeholder="Name required"
+        required
+      />
+
+      <label for="email">Email</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        placeholder="Email required"
+        required
+      />
+
+      <label for="phone">Phone Number</label>
+      <input type="tel" id="phone" name="phone" />
+
+      <label for="subject">Subject</label>
+      <input
+        type="text"
+        id="subject"
+        name="subject"
+        placeholder="Subject required"
+        required
+      />
 
       <label for="message">Message</label>
-      <textarea id="message" name="message"></textarea>
+      <textarea
+        id="message"
+        name="message"
+        placeholder="Write your message here!"
+        required
+      ></textarea>
 
       <label for="priority">Priority</label>
       <select id="priority" name="priority">
@@ -28,18 +60,21 @@
       <fieldset>
         <legend>Type</legend>
         <label>
-          <input type="radio" name="type" value="1" checked />Complaint</label
+          <input type="radio" name="type" value="1" checked />Job Offer</label
         >
         <br />
-        <label> <input type="radio" name="type" value="2" />Suggestion</label>
+        <label> <input type="radio" name="type" value="2" />Question</label>
+        <br />
+        <label> <input type="radio" name="type" value="3" />Other</label>
       </fieldset>
+
       <label>
-        <input type="checkbox" name="terms" />
-        I agree to the terms and conditions
+        <input type="checkbox" name="terms" required />
+        I'm Not a Robot
       </label>
 
       <br />
-      <button>Send</button>
+      <button type="submit">Send</button>
     </form>
   </body>
 </html>
