--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </style>
     <header>
       <button class="show-contact">Contact me!</button>
+      <button onclick="topFunction()" id="goTopBtn" title="Go to top">
+        ⬆ Top
+      </button>
     </header>
 
     <section id="profileimg">
@@ -45,6 +48,7 @@
         <p>TypeScript</p>
         <p>HTML</p>
         <p>CSS</p>
+        <p>PHP</p>
       </div>
       <div class="skill">
         <h2>🛠️ Development Frameworks and Technologies</h2>
@@ -62,6 +66,7 @@
         <p>Postman</p>
         <p>Browser Console</p>
         <p>Unity</p>
+        <p>XAMPP</p>
       </div>
     </section>
 
