--- a/form.html
+++ b/form.html
@@ -10,6 +10,9 @@
     />
   </head>
   <body>
+    <a href="index.html" style="float: right; text-decoration: none">
+      <button>Go back to main page!</button>
+    </a>
     <h1>Contact me!</h1>
     <form action="process-form.php" method="post">
       <label for="name">Name</label>
