--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <p>C#</p>
         <p>JavaScript</p>
         <p>TypeScript</p>
+        <p>SQL</p>
+        <p>REST API</p>
         <p>HTML</p>
         <p>CSS</p>
         <p>PHP</p>
